fixed header nav spacings

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -54,31 +54,36 @@ header .container {
   width: 212px;
   height: 40px;
   background-color: #ffffff;
-  font-size: 1.6rem;
   border: #ffffff;
+  font-weight: 400;
+  letter-spacing: 0.2rem;
+}
+.header_nav .btn a{
+  margin-left: 10px;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
 }
 .header_nav .btn::before{
-  position: relative;
-  top: unset;
+  content: url("/assets/img/common/arrow_on_btn.png");
+  /* 5px = 13px * 0.384   8px = 19px * 0.421*/
+  transform: scaleX(0.384) scaleY(0.421);
 }
 .header_nav .btn::after {
   content: "RESERVE";
   font-size: 1rem;
-  letter-spacing: 0.2em;
-  line-height: 1.2rem;
+  line-height: 2.6rem;
   margin-left: 10px;
 }
 .header_nav_list {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.6rem;
   height: max-content;
-  list-style: none;
   margin-top: 20px;
 }
 .header_nav_list_item {
   margin-left: 50px;
+  list-style: none;
 }
 .header_nav_list_item:nth-child(7) {
   margin-left: 20px;
@@ -87,16 +92,23 @@ header .container {
   color: #ffffff;
   text-decoration: none;
   position: relative;
+  font-size: 1.6rem;
   letter-spacing: 0.2em;
-  line-height: 1.9rem;
+  line-height: 2.4rem;
+  font-weight: 400;
 }
 .header_nav_list_item a::before {
   font-family: "Inknut Antiqua";
   font-size: 1rem;
   position: absolute;
   transform: translateY(100%);
-  line-height: 1.2rem;
-  margin-top: 15px;
+  display: inline;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%);
+  line-height: 2.6rem;
+  letter-spacing: 0.2rem;
+  font-weight: 400;
 }
 .header_nav_list_item_furigana {
   position: relative;
@@ -106,29 +118,25 @@ header .container {
   position: absolute;
   content: "おけら";
   font-size: 1rem;
-  transform: translateY(-80%);
-  line-height: 1.9rem;
+  bottom: 100%;
+  line-height: 1.5rem;
   letter-spacing: 0.2em;
+  font-weight: 400;
 }
 .header_nav_list_item:first-child a::before {
   content: "ABOUT";
-  left: 29px;
 }
 .header_nav_list_item:nth-child(2) a::before {
   content: "FOOD";
-  left: 4px;
 }
 .header_nav_list_item:nth-child(3) a::before {
   content: "PLAY";
-  left: -2px;
 }
 .header_nav_list_item:nth-child(4) a::before {
   content: "NEWS";
-  left: 16px;
 }
 .header_nav_list_item:nth-child(5) a::before {
   content: "ACCESS";
-  left: 3px;
 }
 .header_nav_list_item img {
   width: 24px;
@@ -153,21 +161,11 @@ main {
 .btn {
   border: solid 1px #000000;
   font-family: "Inknut Antiqua";
-  font-size: 1rem;
   width: 100px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  letter-spacing: 0.2em;
-  line-height: 1.2rem;
-}
-.btn::before{
-  content: url("/assets/img/common/arrow_on_btn.png");
-  /* 5px = 13px * 0.384   8px = 19px * 0.421*/
-  transform: scaleX(0.384) scaleY(0.421);
-  position: relative;
-  top: 1px;
 }
 .btn a {
   text-decoration: none;
